# ecommerce-django

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
accounts/: models.py
apps/cart/: models.py  permissions.py  serializers.py  services.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_initial.py
apps/cart/tests/: test_api.py  test_services.py
apps/catalog/: constants.py  storage.py  urls.py
apps/catalog/choices/: __init__.py  product.py
apps/catalog/migrations/: 0001_initial.py
apps/catalog/models/: __init__.py  product.py  product_media.py  review.py  review_media.py  review_reaction.py
apps/catalog/services/: __init__.py  product.py
apps/orders/: choices.py  models.py  services.py  urls.py
apps/orders/choices/: __init__.py  orders.py
apps/orders/migrations/: 0001_initial.py  0003_remove_order_order_id_alter_order_id_and_more.py
apps/orders/models/: __init__.py  cart.py  cart_item.py  order.py  order_item.py
apps/orders/services/: __init__.py  cart.py  orders.py
apps/orders/tests/: test_orders_api.py  (+2 more)
apps/payments/: choices.py  models.py
apps/products/: constants.py  models.py  permissions.py  serializers.py  services.py  storage.py  urls.py  views.py
apps/reviews/: models.py  serializers.py  storage.py
apps/sellers/: models.py  permissions.py  serializers.py
apps/users/: apps.py  models.py
cart/: models.py
core/: settings.py  urls.py
ecommerce/: settings.py  urls.py
orders/: models.py
templates/: footer.html  main.html  navbar.html
templates/eccomerce/: home.html
(+28 files in other folders)
